# cockroach

./: .cursorignore  life_of_rangefeed.md
.claude/skills/: life-of-document.md
.cursor/rules/: cockroach_testing.md
docs/tech-notes/: life_of_a_backup.md
pkg/: BUILD.bazel
pkg/backup/: BUILD.bazel  backup_job.go  backup_planning.go  flaky_storage_test.go  restore_old_versions_test.go  schedule_exec.go
pkg/backup/backuptestutils/: BUILD.bazel  testutils.go
pkg/base/: test_server_args.go  testing_knobs.go
pkg/blobs/: client.go
pkg/ccl/backupccl/: BUILD.bazel  backup_job.go  full_cluster_backup_restore_test.go  restore_entry_cover_generated_test.go  show.go  tenant_backup_nemesis_test.go
pkg/ccl/changefeedccl/: BUILD.bazel  changefeed_processors.go  changefeed_test.go  helpers_test.go
pkg/ccl/multiregionccl/: multiregion_system_table_test.go
pkg/ccl/sqlproxyccl/: BUILD.bazel  authentication.go  backend_dialer.go  conn_migration.go  conn_migration_test.go  connector.go  connector_test.go  forwarder.go  forwarder_test.go  metrics.go  proxy_handler.go  proxy_handler_test.go  server.go  tenant_dialer.go
pkg/cli/: flags.go  mt_start_sql.go  tsdump.go  tsdump_upload.go  tsdump_upload_test.go
pkg/cli/cliflags/: flags_mt.go
pkg/cli/testdata/: tsdump_upload_embedded_metadata
pkg/cloud/: external_storage.go  impl_registry.go
pkg/cloud/cloudtestutils/: BUILD.bazel  cloud_nemesis.go  random_bucket.go
pkg/cloud/faulty/: BUILD.bazel  faulty.go  faulty_reader.go  faulty_writer.go
pkg/cloud/gcp/: gcs_storage_test.go
pkg/cloud/nodelocal/: nodelocal_storage.go
pkg/cmd/roachprod/: flags.go
pkg/cmd/roachtest/: cluster.go  test_runner.go
pkg/crosscluster/ldrrandgen/: logical.go  logical_test.go
pkg/crosscluster/logical/: BUILD.bazel  create_logical_replication_stmt.go  cruddy_batch_handler.go  event_decoder.go  logical_replication_job_test.go  logical_replication_writer_processor.go  lww_kv_processor.go  lww_row_processor.go  replication_statements.go  replication_statements_test.go  sql_crud_queries.go  sql_crud_queries_test.go  sql_crud_writer.go  sql_row_reader.go  sql_row_reader_test.go  sql_row_writer.go  sql_row_writer_test.go  table_batch_handler.go  table_batch_handler_test.go  (+1 more)
pkg/jobs/: jobs.go  update.go
pkg/roachprod/: BUILD.bazel  clusters_cache.go  roachprod.go
pkg/server/: BUILD.bazel  config.go  external_storage_builder.go  server_sql.go
pkg/settings/: registry.go
pkg/sql/: conn_executor_exec.go  conn_executor_test.go  crdb_internal.go  exec_util.go  internal.go  region_util.go  revert.go  revert_test.go  sql_crud_queries_test.go  vars.go
pkg/sql/sqlliveness/: BUILD.bazel  sqlliveness.go
pkg/sql/sqlliveness/slinstance/: BUILD.bazel  slinstance.go
pkg/sql/sqlliveness/slstorage/: BUILD.bazel  slstorage.go  slstorage_test.go
pkg/sstmerge/: BUILD.bazel  DESIGN.md  main_test.go  merge.go  merge_coordinator.go  merge_processor.go  merge_test.go  models.go  splits.go  sst_ingest_job.go  sst_ingest_job_test.go  task_set.go  task_set_test.go  work.go
pkg/storage/: mvcc.go
pkg/testutils/goroutinedump/: BUILD.bazel  dump.go
pkg/util/besteffort/: BUILD.bazel  besteffort.go  besteffort_test.go  override.go
pkg/workload/: csv.go  csv_test.go
(+244 files in other folders)
