load("//build/bazelutil/unused_checker:unused.bzl", "get_x_data")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "sqlliveness",
    srcs = ["sqlliveness.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/sql/sqlliveness",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/base",
        "//pkg/sql/rowenc/valueside",
        "//pkg/sql/sem/tree",
        "//pkg/util/encoding",
        "//pkg/util/hlc",
        "//pkg/util/metric",
        "//pkg/util/uuid",
        "@com_github_cockroachdb_errors//:errors",
    ],
)

get_x_data(name = "get_x_data")
