load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "besteffort",
    srcs = [
        "besteffort.go",
        "override.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/util/besteffort",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/util/buildutil",
        "//pkg/util/log",
    ],
)
